# dpdk

doc/api/: doxy-api-index.md  doxy-api.conf.in
examples/aqm/: main.c
lib/: meson.build
lib/librte_aqm/: aqm_codel.c  aqm_codel.h  aqm_none.c  aqm_none.h  aqm_pie.c  aqm_pie.h  aqm_red.c  aqm_red.h  aqm_wred.c  aqm_wred.h  meson.build  pkt_desc_ring.c  pkt_desc_ring.h  rte_aqm.c  rte_aqm.h  rte_aqm_algorithm.h  rte_aqm_version.map
lib/librte_eal/include/: rte_log.h
lib/librte_sched/: meson.build  rte_sched_version.map
